--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container text-center pt-5">
         <div class="text-container">
             <h1>Doge Hacking Group</h1>
+            <h3>Capture the Flag Challenge</h3>
             <a href="./CTF_Readme.txt">Click here to download instructions file</a>    
         </div>
         <form class="row mt-5">
